
function(enableH5Part exename)
    if(SPH_EXA_WITH_H5PART)
        target_compile_definitions(${exename} PUBLIC SPH_EXA_HAVE_H5PART)
        target_include_directories(${exename} PUBLIC ${PROJECT_SOURCE_DIR}/extern/h5part)

        # necessary because the HDF5_INLUCDE_DIRS is empty on CRAY and HIP-compilation is done without the cray-wrapper
        target_include_directories(${exename} PUBLIC $ENV{HDF5_DIR}/include)
        target_link_libraries(${exename} PRIVATE H5Part ${HDF5_LIBRARIES})
    endif()
endfunction()

function(enableADIOS exename)
    if (SPH_EXA_WITH_ADIOS)
        target_compile_definitions(${exename} PUBLIC SPH_EXA_HAVE_ADIOS)
        target_link_libraries(${exename} PRIVATE ${MPI_C_LIBRARIES} adios2::cxx11 adios2::cxx11_mpi)
        target_link_libraries(${exename} PRIVATE adios2::cxx11_mpi MPI::MPI_C)
    endif()
    # TODO: soon we don't need any of these anymore, after ADIOS v2.10
    OPTION(ADIOS_WITH_MGARD "Adios2 is compiled with MGARD" ON)
    OPTION(ADIOS_WITH_ZFP "Adios2 is compiled with ZFP" ON)
    OPTION(ADIOS_WITH_BZIP2 "Adios2 is compiled with BZIP2" ON)
    OPTION(ADIOS_WITH_BLOSC2 "Adios2 is compiled with BLOSC2" ON)
    OPTION(ADIOS_WITH_LIBPRESSIO "Adios2 is compiled with LibPressio" ON)
    OPTION(ADIOS_WITH_SZ "Adios2 is compiled with SZ" ON)
    OPTION(ADIOS_WITH_PNG "Adios2 is compiled with PNG" ON)
    find_package(SZ QUIET)
    if (SZ_FOUND)
    else()
        message(STATUS "No SZ support")
        set(ADIOS_WITH_SZ OFF)
    endif ()
    if (ADIOS_WITH_MGARD)
        target_compile_definitions(${exename} PUBLIC ADIOS2_HAVE_MGARD)
    endif()
    if (ADIOS_WITH_ZFP)
        target_compile_definitions(${exename} PUBLIC ADIOS2_HAVE_ZFP)
    endif()
    if (ADIOS_WITH_BZIP2)
        target_compile_definitions(${exename} PUBLIC ADIOS2_HAVE_BZIP2)
    endif()
    if (ADIOS_WITH_BLOSC2)
        target_compile_definitions(${exename} PUBLIC ADIOS2_HAVE_BLOSC2)
    endif()
    if (ADIOS_WITH_LIBPRESSIO)
        target_compile_definitions(${exename} PUBLIC ADIOS2_HAVE_LIBPRESSIO)
    endif()
    if (ADIOS_WITH_SZ)
        target_compile_definitions(${exename} PUBLIC ADIOS2_HAVE_SZ)
    endif()
    if (ADIOS_WITH_PNG)
        target_compile_definitions(${exename} PUBLIC ADIOS2_HAVE_PNG)
    endif()
endfunction()

add_library(io ifile_io_ascii.cpp ifile_io_hdf5.cpp ifile_io_adios.cpp)
target_include_directories(io PRIVATE ${CSTONE_DIR} ${MPI_CXX_INCLUDE_PATH})
target_link_libraries(io PRIVATE ${MPI_CXX_LIBRARIES})
enableH5Part(io)
enableADIOS(io)
